--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
 				<artifactId>scala-library</artifactId>
 				<version>${scala.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-math</artifactId>
+				<version>2.1</version>
+			</dependency>
 						
 			<!-- Test dependencies -->
 			<dependency>
