--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
 			<dependency>
    				<groupId>dk.betex</groupId>
    				<artifactId>betex-engine</artifactId>
-   				<version>0.2-SNAPSHOT</version>
+   				<version>0.2</version>
 			</dependency>
 		
 			<!-- External dependencies -->
