--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<groupId>dk.betex</groupId>
 	<artifactId>betting-risk</artifactId>
 	<name>betting-risk</name>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 	<inceptionYear>2008</inceptionYear>
 	<url>http://code.google.com/p/betting-exchange/</url>
 	<scm>
-		<connection>scm:svn:http://betting-risk.googlecode.com/svn/tags/betting-risk-0.1</connection>
-		<developerConnection>scm:svn:https://betting-risk.googlecode.com/svn/tags/betting-risk-0.1</developerConnection>
-		<url>http://code.google.com/p/betting-risk/tags/betting-risk-0.1</url>
+		<connection>scm:svn:http://betting-risk.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://betting-risk.googlecode.com/svn/trunk</developerConnection>
+		<url>http://code.google.com/p/betting-risk/</url>
 	</scm>
 
 	<distributionManagement>
